2017-03-07  Stuart Caie <kyzer@cabextract.org.uk>

	* configure.ac, src/cabextract.c: add support for choosing the
	character encoding of non-UTF8 filenames, using the iconv library.
	This is based on a patch originally developed by Kevin Tardif.

2016-04-16  Stuart Caie <kyzer@cabextract.org.uk>

	* configure.ac: change my email address to kyzer@cabextract.org.uk

2015-05-10  Stuart Caie <kyzer@4u.net>

	* wince_rename, wince_info: allow the possibility that strings have
	more than one null byte. Thanks to Stefan Riegler for the suggestion.

2015-05-10  Stuart Caie <kyzer@4u.net>

	* Makefile.am: Add subdir-objects option as suggested by autoreconf.

	* configure.ac: Add AM_PROG_AR as suggested by autoreconf.

2015-02-25  Stuart Caie <kyzer@4u.net>

	* create_output_name(): Simplify code; do path checking only after
	output name has been constructed. Use towlower to lowercase UTF-8
	characters. Remove both leading '/' and '\' from cab filenames and
	change both "../" and "..\" to "xx", for Cygwin and other Cygwin-like
	environments that use both '/' and '\' as path separators. Thanks to
	Alexander Cherepanov and the MITRE team.

2015-02-18  Stuart Caie <kyzer@4u.net>

	* create_output_name(): the check against leading slashes could be
	evaded with malformed UTF-8. Thanks to Alexander Cherepanov for
	reporting the issue.

2015-01-18  Stuart Caie <kyzer@4u.net>

	* wince_rename: installed files now include their install directories.
	Thanks to Alfonso Acosta for sending a patch.

2015-01-08  Stuart Caie <kyzer@4u.net>

	* create_output_name: avoid invalid memory reads because of invalid
	UTF-8 encodings. Use the Unicode substitution character for most
	bad UTF-8 or Unicode encodings. Thanks to Hanno Böck.

	* src/cabinfo.c: stop trying to convert UTF-8 to ASCII in filename.
	Instead, prepend "UTF: " and print it to the terminal verbatim.

2011-07-19  Stuart Caie <kyzer@4u.net>

	* doc/ja/cabextract.1: Katsumi Saito updated the Japanese translation